--- a/derivative_security/document_similarity.ipynb
+++ b/derivative_security/document_similarity.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ziababar/machinelearning/blob/master/document_similarity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ziababar/demos/blob/master/derivative_security/document_similarity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,9 +32,8 @@
       "source": [
         "# Background\n",
         "\n",
+        "The objective of this notebook program is to find how similar two documents are. This can be used to determine the derivative documents from a source document.\n",
         "\n",
-        "\n",
-        "Objective\n",
         "\n",
         "\n",
         "\n",
@@ -58,9 +57,13 @@
         "colab_type": "text"
       },
       "source": [
-        "**Natural language toolkit (NLTK)** is the most popular library for natural language processing (NLP) which was written in Python and has a big community behind it. NLTK also is very easy to learn, actually, it’ s the easiest natural language processing (NLP) library that we are going to use. It contains text processing libraries for tokenization, parsing, classification, stemming, tagging and semantic reasoning.\n",
+        "The following libraries are used in this program.\n",
         "\n",
-        "**Gensim** is billed as a Natural Language Processing package that does ‘Topic Modeling for Humans’. But it is practically much more than that. It is a leading and a state-of-the-art package for processing texts, working with word vector models (such as Word2Vec, FastText etc)"
+        "**Scikit-learn**\n",
+        "\n",
+        "**Natural language toolkit:** NLTK contains text processing libraries for tokenization, parsing, classification, stemming, tagging and semantic reasoning.\n",
+        "\n",
+        "**Gensim:** provides packages for processing texts, working with word vector models."
       ]
     },
     {
@@ -71,9 +74,12 @@
         "colab": {}
       },
       "source": [
-        "# install nltk and gensim by following commands\n",
+        "# import the required libraries\n",
         "import gensim\n",
-        "import nltk\n"
+        "import nltk\n",
+        "import sklearn\n",
+        "\n",
+        "import requests\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -83,15 +89,41 @@
       "metadata": {
         "id": "-LrFc_PDRUCT",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "08e25452-5fd4-4070-abe5-4c24412b8cec"
       },
       "source": [
-        "nltk.download('punkt')\n",
         "from nltk.tokenize import word_tokenize # Word Tokenizer\n",
-        "from nltk.tokenize import sent_tokenize # Sentence Tokenizer"
+        "from nltk.tokenize import sent_tokenize # Sentence Tokenizer\n",
+        "\n",
+        "nltk.download('punkt')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -119,6 +151,68 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CudznFNuJUF7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        },
+        "outputId": "377f0805-841d-4bf2-c8b4-ba6ecf652c35"
+      },
+      "source": [
+        "target_url = 'https://raw.githubusercontent.com/ziababar/demos/master/derivative_security/data/doc1.txt'\n",
+        "response = requests.get(target_url)\n",
+        "doc1 = response.text\n",
+        "print(doc1)\n"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The Pentagon must stop pretending the state of cyberwarfare is something new, and that the damage it wreaks is different. If we have not absorbed the lessons of the past, then they will be tested on us again.\n",
+            "\n",
+            "Anonymous \"Anonymous\" is the hacker group famous for its attacks on the Church of Scientology, international terrorist groups, and other governments and corporations. As the name implies, the collective can appear anywhere at any time, and offers its services as a collective attack on Internet services.\n",
+            "\n",
+            "In lieu of completely replacing or replacing the process of wargaming the point I want to bring up is that wargames will continue to exist and wargames can be designed and tested. In the case of Dark Age of Camelot I had some limitations, one of which was the lack of people online to play with. I was a solo design, purely with a notebook. And as you know most games I make end up being played by others. And this means that when my friends started playing I was there, and now I can go to Wargames Monday and Google groups. Also, you don't have to make my dream come true to play.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ACIfcipsKk2c",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "target_url = 'https://raw.githubusercontent.com/ziababar/demos/master/derivative_security/data/doc2.txt'\n",
+        "response = requests.get(target_url)\n",
+        "doc2 = response.text"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9A4RGLWaKoKE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "target_url = 'https://raw.githubusercontent.com/ziababar/demos/master/derivative_security/data/doc3.txt'\n",
+        "response = requests.get(target_url)\n",
+        "doc3 = response.text"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "greBaHqGRfw0",
         "colab_type": "code",
         "colab": {}
@@ -138,13 +232,31 @@
       "metadata": {
         "id": "lapzvT1ORni0",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "b2a59fb3-efb6-473e-8f47-ce81e079305c"
       },
       "source": [
-        "#print(\"Number of documents:\",len(raw_documents))"
+        "print(\"Number of documents:\",len(raw_documents))\n",
+        "print(\"Number of documents:\",len(doc1))\n",
+        "print(\"Number of documents:\",len(doc2))\n",
+        "print(\"Number of documents:\",len(doc3))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of documents: 5\n",
+            "Number of documents: 1098\n",
+            "Number of documents: 1098\n",
+            "Number of documents: 514\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -188,20 +300,36 @@
       "metadata": {
         "id": "jJhNFapNIDzK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e0b54095-b6bb-4cd6-b453-0a56356dbe27"
       },
       "source": [
         "file_docs = []\n",
         "\n",
-        "with open ('demofile.txt') as f:\n",
-        "    tokens = sent_tokenize(f.read())\n",
-        "    for line in tokens:\n",
-        "        file_docs.append(line)\n",
+        "# with open ('demofile.txt') as f:\n",
+        "#    tokens = sent_tokenize(f.read())\n",
+        "#    for line in tokens:\n",
+        "#        file_docs.append(line)\n",
+        "\n",
+        "tokens = sent_tokenize(doc1)\n",
+        "for line in tokens:\n",
+        "    file_docs.append(line)\n",
         "\n",
         "print(\"Number of documents:\",len(file_docs))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of documents: 10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -242,7 +370,7 @@
         "colab": {}
       },
       "source": [
-        "gen_docs = [[w.lower() for w in word_tokenize(text)] \n",
+        "gen_docs = [[w.lower() for w in word_tokenize(file_docs)] \n",
         "            for text in raw_documents]"
       ],
       "execution_count": 0,
