--- a/derivative_security/document_similarity.ipynb
+++ b/derivative_security/document_similarity.ipynb
@@ -89,11 +89,11 @@
       "metadata": {
         "id": "-LrFc_PDRUCT",
         "colab_type": "code",
+        "outputId": "08e25452-5fd4-4070-abe5-4c24412b8cec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "08e25452-5fd4-4070-abe5-4c24412b8cec"
+        }
       },
       "source": [
         "from nltk.tokenize import word_tokenize # Word Tokenizer\n",
@@ -101,7 +101,7 @@
         "\n",
         "nltk.download('punkt')"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,11 +153,11 @@
       "metadata": {
         "id": "CudznFNuJUF7",
         "colab_type": "code",
+        "outputId": "377f0805-841d-4bf2-c8b4-ba6ecf652c35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
-        },
-        "outputId": "377f0805-841d-4bf2-c8b4-ba6ecf652c35"
+        }
       },
       "source": [
         "target_url = 'https://raw.githubusercontent.com/ziababar/demos/master/derivative_security/data/doc1.txt'\n",
@@ -165,7 +165,7 @@
         "doc1 = response.text\n",
         "print(doc1)\n"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,11 +232,11 @@
       "metadata": {
         "id": "lapzvT1ORni0",
         "colab_type": "code",
+        "outputId": "b2a59fb3-efb6-473e-8f47-ce81e079305c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "b2a59fb3-efb6-473e-8f47-ce81e079305c"
+        }
       },
       "source": [
         "print(\"Number of documents:\",len(raw_documents))\n",
@@ -244,7 +244,7 @@
         "print(\"Number of documents:\",len(doc2))\n",
         "print(\"Number of documents:\",len(doc3))\n"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,11 +288,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_ZZ8NC6YIHyj",
+        "id": "IbvZMF0I5v1A",
         "colab_type": "text"
       },
       "source": [
-        "Create a .txt file and write 4-5 sentences in it. Include the file with the same directory of your Python program. Now, we are going to open this file with Python and split sentences."
+        "We use the method word_tokenize() to split a sentence into words."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SAxT7bjj5vJv",
+        "colab_type": "text"
+      },
+      "source": [
+        "We need to count average words per sentence, so for accomplishing such a task, we use sentence tokenization as well as words to calculate the ratio."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6_rTH28O5pbE",
+        "colab_type": "text"
+      },
+      "source": [
+        "Program will open file and read it's content. Then it will add tokenized sentences into the array for word tokenization."
       ]
     },
     {
@@ -300,19 +320,14 @@
       "metadata": {
         "id": "jJhNFapNIDzK",
         "colab_type": "code",
+        "outputId": "e0b54095-b6bb-4cd6-b453-0a56356dbe27",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e0b54095-b6bb-4cd6-b453-0a56356dbe27"
+        }
       },
       "source": [
         "file_docs = []\n",
-        "\n",
-        "# with open ('demofile.txt') as f:\n",
-        "#    tokens = sent_tokenize(f.read())\n",
-        "#    for line in tokens:\n",
-        "#        file_docs.append(line)\n",
         "\n",
         "tokens = sent_tokenize(doc1)\n",
         "for line in tokens:\n",
@@ -320,7 +335,7 @@
         "\n",
         "print(\"Number of documents:\",len(file_docs))"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,6 +344,65 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "836BrtnG5148",
+        "colab_type": "text"
+      },
+      "source": [
+        "Once we added tokenized sentences in array, it is time to tokenize words for each sentence."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZQnlxWmj53yH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gen_docs = [[w.lower() for w in word_tokenize(text)] for text in file_docs]\n",
+        "\n",
+        "print(gen_docs)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SYwc5uhm6FbV",
+        "colab_type": "text"
+      },
+      "source": [
+        "In order to work on text documents, Gensim requires the words (aka tokens) be converted to unique ids. So, Gensim lets you create a Dictionary object that maps each word to a unique id. Let's convert our sentences to a [list of words] and pass it to the corpora.Dictionary() object"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qG69oBPR6GPV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dictionary = gensim.corpora.Dictionary(gen_docs)\n",
+        "print(dictionary.token2id)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qqq9rD2U6QdA",
+        "colab_type": "text"
+      },
+      "source": [
+        "A dictionary maps every word to a number. Gensim lets you read the text and update the dictionary, one line at a time, without loading the entire text file into system memory."
       ]
     },
     {
@@ -348,30 +422,30 @@
         "colab_type": "text"
       },
       "source": [
-        "We use the method word_tokenize() to split a sentence into words. \n",
-        "\n"
+        "The next important object you need to familiarize with in order to work in gensim is the Corpus (a Bag of Words). It is a basically object that contains the word id and its frequency in each document (just lists the number of times each word occurs in the sentence).\n",
+        "\n",
+        "Note that, a ‘token’ typically means a ‘word’. A ‘document’ can typically refer to a ‘sentence’ or ‘paragraph’ and a ‘corpus’ is typically a ‘collection of documents as a bag of words’.\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jbzjw93DIPYa",
+        "id": "0nriMOHl6bfk",
         "colab_type": "text"
       },
       "source": [
-        "Once we added tokenized sentences in array, it is time to tokenize words for each sentence."
+        "Now, create a bag of words corpus and pass the tokenized list of words to the Dictionary.doc2bow()"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pn3Hm6MHRjMD",
+        "id": "LAl236KY6dZs",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "gen_docs = [[w.lower() for w in word_tokenize(file_docs)] \n",
-        "            for text in raw_documents]"
+        "corpus = [dictionary.doc2bow(gen_doc) for gen_doc in gen_docs]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -379,47 +453,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZLN-U2NuRziU",
+        "id": "higIr2xw6r6k",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "#print(gen_docs)"
+        "print(corpus)"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "eTVTaV3mRrcj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "n3K2ESvB6rEM",
+        "colab_type": "text"
       },
       "source": [
-        "dictionary = gensim.corpora.Dictionary(gen_docs)\n",
-        "#print(dictionary[5])\n",
-        "#print(dictionary.token2id['road'])\n",
-        "#print(\"Number of words in dictionary:\",len(dictionary))\n",
-        "#for i in range(len(dictionary)):\n",
-        "#    print(i, dictionary[i])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "POqBiZMUSkVt",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "corpus = [dictionary.doc2bow(gen_doc) for gen_doc in gen_docs]\n",
-        "#print(corpus)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "As you see we used \"the\" two times in second sentence and if you look word with id=12 (the) you will see that its frequency is 2 (appears 2 times in sentence)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -432,6 +484,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jZVR8_cD6iwn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Term Frequency – Inverse Document Frequency(TF-IDF) is also a bag-of-words model but unlike the regular corpus, TFIDF down weights tokens (words) that appears frequently across documents.\n",
+        "\n",
+        "Tf-Idf is calculated by multiplying a local component (TF) with a global component (IDF) and optionally normalizing the result to unit length. Term frequency is how often the word shows up in the document and inverse document frequency scales the value by how rare the word is in the corpus. In simple terms, words that occur more frequently across the documents get smaller weights."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "cxDawqPGSoMN",
@@ -440,14 +504,21 @@
       },
       "source": [
         "tf_idf = gensim.models.TfidfModel(corpus)\n",
-        "#print(tf_idf)\n",
-        "s = 0\n",
-        "for i in corpus:\n",
-        "    s += len(i)\n",
-        "#print(s)"
+        "for doc in tfidf[corpus]:\n",
+        "    print([[dictionary[id], np.around(freq, decimals=2)] for id, freq in doc])"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TP9yMkDn6o0S",
+        "colab_type": "text"
+      },
+      "source": [
+        "The word ‘the’ occurs in two documents so it weighted down. The word ‘this’ and 'is' appearing in all three documents so removed altogether."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -477,9 +548,9 @@
         "colab": {}
       },
       "source": [
-        "sims = gensim.similarities.Similarity('/usr',tf_idf[corpus], num_features=len(dictionary))\n",
-        "#print(sims)\n",
-        "#print(type(sims))"
+        "# building the index\n",
+        " sims = gensim.similarities.Similarity('workdir/',tf_idf[corpus],\n",
+        "                                        num_features=len(dictionary))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -504,11 +575,18 @@
         "colab": {}
       },
       "source": [
-        "query_doc_1 = [w.lower() for w in word_tokenize(\"Evolving privacy and security regulations.\")]\n",
-        "query_doc_bow = dictionary.doc2bow(query_doc_1)\n",
+        "file2_docs = []\n",
         "\n",
-        "query_doc_tf_idf = tf_idf[query_doc_bow]\n",
-        "sims[query_doc_tf_idf]"
+        "with open ('demofile2.txt') as f:\n",
+        "    tokens = sent_tokenize(f.read())\n",
+        "    for line in tokens:\n",
+        "        file2_docs.append(line)\n",
+        "\n",
+        "print(\"Number of documents:\",len(file2_docs))  \n",
+        "for line in file2_docs:\n",
+        "    query_doc = [w.lower() for w in word_tokenize(line)]\n",
+        "    query_doc_bow = dictionary.doc2bow(query_doc) #update an existing dictionary and\n",
+        "create bag of words"
       ],
       "execution_count": 0,
       "outputs": []
@@ -544,31 +622,23 @@
         "colab": {}
       },
       "source": [
-        "query_doc_2 = [w.lower() for w in word_tokenize(\"Data encrytion is important for enterprises looking for data security and data privacy.\")]\n",
-        "query_doc_bow = dictionary.doc2bow(query_doc_2)\n",
-        "\n",
+        "# perform a similarity query against the corpus\n",
         "query_doc_tf_idf = tf_idf[query_doc_bow]\n",
-        "sims[query_doc_tf_idf]"
+        "# print(document_number, document_similarity)\n",
+        "print('Comparing Result:', sims[query_doc_tf_idf]) "
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "9WIt4SP_Svta",
-        "colab_type": "code",
-        "colab": {}
+        "id": "RnVSD6J97TqU",
+        "colab_type": "text"
       },
       "source": [
-        "query_doc_3 = [w.lower() for w in word_tokenize(\"He turned in the research paper on Friday; otherwise, he would have not passed the class.\")]\n",
-        "query_doc_bow = dictionary.doc2bow(query_doc_3)\n",
-        "\n",
-        "query_doc_tf_idf = tf_idf[query_doc_bow]\n",
-        "sims[query_doc_tf_idf]"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "Cosine measure returns similarities in the range (the greater, the more similar)."
+      ]
     },
     {
       "cell_type": "markdown",
