--- a/derivative_security/notebooks/image_similarity.ipynb
+++ b/derivative_security/notebooks/image_similarity.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image_similarity.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOkzYU4cn9E/gsRRKrdWPTj",
+      "authorship_tag": "ABX9TyNtxOSARJ2cD7iVxU8xz7Cy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,14 +21,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ziababar/demos/blob/master/derivative_security/image_similarity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ziababar/demos/blob/master/derivative_security/notebooks/image_similarity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YuIahsh1tXBS",
-        "colab_type": "text"
+        "id": "YuIahsh1tXBS"
       },
       "source": [
         "# Background\n",
@@ -39,8 +38,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4hjjXXeEtfDT",
-        "colab_type": "text"
+        "id": "4hjjXXeEtfDT"
       },
       "source": [
         "# References\n",
@@ -56,8 +54,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "e9hQSKzxunS_",
-        "colab_type": "text"
+        "id": "e9hQSKzxunS_"
       },
       "source": [
         "# Libraries\n",
@@ -73,9 +70,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bFZ_x4Q5e3Ui",
-        "colab_type": "code",
-        "colab": {}
+        "id": "bFZ_x4Q5e3Ui"
       },
       "source": [
         "# We need to downgrade OpenCV as some none-free features are not available in the latest version\n",
@@ -84,15 +79,13 @@
         "!pip uninstall opencv-python -y\n",
         "!pip install opencv-contrib-python==3.4.2.17 --force-reinstall\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zGdkArnlP01g",
-        "colab_type": "code",
-        "colab": {}
+        "id": "zGdkArnlP01g"
       },
       "source": [
         "import cv2\n",
@@ -101,14 +94,13 @@
         "from urllib.request import urlopen\n",
         "from google.colab.patches import cv2_imshow\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zC151CM7vOZD",
-        "colab_type": "text"
+        "id": "zC151CM7vOZD"
       },
       "source": [
         "# Data Sources\n",
@@ -125,8 +117,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OAzuVrt7Py4z",
-        "colab_type": "text"
+        "id": "OAzuVrt7Py4z"
       },
       "source": [
         "We now download all the images."
@@ -135,9 +126,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nndO4cQKbDp8",
-        "colab_type": "code",
-        "colab": {}
+        "id": "nndO4cQKbDp8"
       },
       "source": [
         "# download the image, convert it to a NumPy array, and then read\n",
@@ -148,89 +137,91 @@
         "    return image\n",
         "    "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UE5IIa9HapvF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UE5IIa9HapvF"
       },
       "source": [
         "# Download the original image\n",
         "original = url_to_image(\"https://raw.githubusercontent.com/ziababar/demos/master/derivative_security/data/original_golden_bridge-300x169.jpg\")\n",
         "cv2_imshow(original)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sJYBtdUFbw0f",
-        "colab_type": "code",
-        "colab": {}
+        "id": "sJYBtdUFbw0f"
       },
       "source": [
         "# Download the duplicate image\n",
         "duplicate = url_to_image(\"https://raw.githubusercontent.com/ziababar/demos/master/derivative_security/data/original_golden_bridge-300x169.jpg\")\n",
         "cv2_imshow(duplicate)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KmNPwnBeceBN",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ksSCKBwX7mcX"
+      },
+      "source": [
+        "# Download the rotated image\n",
+        "rotated = url_to_image(\"https://raw.githubusercontent.com/ziababar/demos/master/derivative_security/data/original_golden_bridge-169x300.jpg\")\n",
+        "cv2_imshow(rotated)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KmNPwnBeceBN"
       },
       "source": [
         "# Download the mixed color image\n",
         "mixed_colors = url_to_image(\"https://raw.githubusercontent.com/ziababar/demos/master/derivative_security/data/mixed_colors-1024x575.jpg\")\n",
         "cv2_imshow(mixed_colors)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jBGmFa0NdlLp",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jBGmFa0NdlLp"
       },
       "source": [
         "# Download the sunburst image\n",
         "sunburst = url_to_image(\"https://raw.githubusercontent.com/ziababar/demos/master/derivative_security/data/sunburst-1024x575.jpg\")\n",
         "cv2_imshow(sunburst)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4RgYqVy-dlYJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4RgYqVy-dlYJ"
       },
       "source": [
         "# Download the textured the image\n",
         "textured = url_to_image(\"https://raw.githubusercontent.com/ziababar/demos/master/derivative_security/data/textured-1024x575.jpg\")\n",
         "cv2_imshow(textured)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GBsvy5m9wh3G",
-        "colab_type": "text"
+        "id": "GBsvy5m9wh3G"
       },
       "source": [
         "# Image Processing\n",
@@ -240,8 +231,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JpioGkXMP3Ov",
-        "colab_type": "text"
+        "id": "JpioGkXMP3Ov"
       },
       "source": [
         "There are multiple cases to consider when processing and comparing images.\n"
@@ -250,8 +240,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OmU25S8NxRo9",
-        "colab_type": "text"
+        "id": "OmU25S8NxRo9"
       },
       "source": [
         "## Case 1 - Images are identical\n",
@@ -269,39 +258,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Lb4-Oe-bP_sX",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Lb4-Oe-bP_sX"
       },
       "source": [
         "# Check if both images are the same size\n",
         "if original.shape == duplicate.shape:\n",
         "    print(\"The images have same size and channels\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fNrLeS2_xzt7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "fNrLeS2_xzt7"
       },
       "source": [
         "# The operation cv2.subtract(image1, image2) simply subtract from each pixel of the first image, the value of the corresponding pixel in the second image.\n",
         "difference = cv2.subtract(original, duplicate)\n",
         "b, g, r = cv2.split(difference)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pcqxwQ-Gx7fq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pcqxwQ-Gx7fq"
       },
       "source": [
         "# A colored image has 3 channels (blue, green and red)\n",
@@ -311,14 +294,13 @@
         "if cv2.countNonZero(b) == 0 and cv2.countNonZero(g) == 0 and cv2.countNonZero(r) == 0:\n",
         "    print(\"The images are completely Equal\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZvWhaxmfyS8U",
-        "colab_type": "text"
+        "id": "ZvWhaxmfyS8U"
       },
       "source": [
         "If the images are equal, the result will be a black image (which means each pixel will have value 0).\n"
@@ -327,21 +309,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WIWhXFTayW5O",
-        "colab_type": "code",
-        "colab": {}
+        "id": "WIWhXFTayW5O"
       },
       "source": [
         "cv2_imshow(difference)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NN4pw8oXQQyr",
-        "colab_type": "text"
+        "id": "NN4pw8oXQQyr"
       },
       "source": [
         "## Case 2 - Images are similar but not identical"
@@ -350,8 +329,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KmP6Rwh-QSPc",
-        "colab_type": "text"
+        "id": "KmP6Rwh-QSPc"
       },
       "source": [
         "In some cases, the two derived image may not be identifical to the source image.\n",
@@ -364,8 +342,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zIG1m61S5voH",
-        "colab_type": "text"
+        "id": "zIG1m61S5voH"
       },
       "source": [
         "Here an approach called Scale Invariant Feature Transform (SIFT) is used to extract keypoints and compute its descriptors.\n",
@@ -379,22 +356,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aqmeqCFbQhG9",
-        "colab_type": "code",
-        "colab": {}
+        "id": "aqmeqCFbQhG9"
       },
       "source": [
         "# Construct a SIFT object\n",
         "sift = cv2.xfeatures2d.SIFT_create()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CKC8Y5fh-eUU",
-        "colab_type": "text"
+        "id": "CKC8Y5fh-eUU"
       },
       "source": [
         "sift.detect() function finds the keypoint in the images.\n",
@@ -406,23 +380,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pkI05kkueeCY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pkI05kkueeCY"
       },
       "source": [
         "# Detect key points and descriptors both both images\n",
-        "kp_1, desc_1 = sift.detectAndCompute(textured, None)\n",
-        "kp_2, desc_2 = sift.detectAndCompute(mixed_colors, None)\n"
+        "kp_1, desc_1 = sift.detectAndCompute(original, None)\n",
+        "kp_2, desc_2 = sift.detectAndCompute(mixed_colors, None)\n",
+        "kp_3, desc_3 = sift.detectAndCompute(rotated, None)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oV1wBQxT-5v0",
-        "colab_type": "text"
+        "id": "oV1wBQxT-5v0"
       },
       "source": [
         "OpenCV also provides cv.drawKeyPoints() function which draws the small circles on the locations of keypoints."
@@ -431,26 +403,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VmCpu8Pumf5j",
-        "colab_type": "code",
-        "colab": {}
+        "id": "VmCpu8Pumf5j"
       },
       "source": [
-        "img=cv2.drawKeypoints(mixed_colors, kp, textured)\n",
+        "img=cv2.drawKeypoints(original, kp_1, img)\n",
         "cv2_imshow(img)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QB-gNUcyQnwp",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mwUnjifk7_oR"
       },
       "source": [
-        "# Load FlannBasedMatcher which it the method used to find the matches between the descriptors of both the images.\n",
+        "img=cv2.drawKeypoints(rotated, kp_1, img)\n",
+        "cv2_imshow(img)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QB-gNUcyQnwp"
+      },
+      "source": [
+        "# Load FlannBasedMatcher which is the method used to find the matches between the descriptors of both the images.\n",
         "index_params = dict(algorithm=0, trees=5)\n",
         "search_params = dict()\n",
         "flann = cv2.FlannBasedMatcher(index_params, search_params)\n",
@@ -459,14 +439,13 @@
         "# The array will contain all possible matches, so many false matches as well.\n",
         "matches = flann.knnMatch(desc_1, desc_2, k=2)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "getD8MjjQqJi",
-        "colab_type": "text"
+        "id": "getD8MjjQqJi"
       },
       "source": [
         "Apply the ratio test to select only the good matches. The quality of a match is define by the distance. The distance is a number, and the lower this number is, the more similar the features are.\n",
@@ -479,13 +458,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Sa5coEaGQtM0",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Sa5coEaGQtM0"
       },
       "source": [
         "good_points = []\n",
-        "ratio = 0.6\n",
+        "ratio = 0.8\n",
         "\n",
         "for m, n in matches:\n",
         "    if m.distance < ratio*n.distance:\n",
@@ -494,14 +471,13 @@
         "# Find the number of good matches found\n",
         "print(len(good_points))\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fRt4HqOuMKtk",
-        "colab_type": "text"
+        "id": "fRt4HqOuMKtk"
       },
       "source": [
         "We can see the found matches of keypoints from both two images. Here the parameters are,\n",
@@ -515,15 +491,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l1RWSU2ELAu9",
-        "colab_type": "code",
-        "colab": {}
+        "id": "l1RWSU2ELAu9"
       },
       "source": [
         "result = cv2.drawMatches(original, kp_1, mixed_colors, kp_2, good_points, None)\n",
         "cv2_imshow(result)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
